@@ -16,6 +16,8 @@
   * Added "scalebox" argument to include a "\scalebox" clause around
     the tabular environment with the specified value used as the
     scaling factor.	
+  * Added "width" argument to allow specification of the width
+    value in tabular environments such as "tabularx".  
   * Changed the "print.xtable()" arguments to use "getOption()"
     to check the options for a default value.  This was suggested
 	since "print.xtable()" has a lot of arguments that the user
